2010-01-29  Ozkan Sezer  <sezeroz@gmail.com>

	* stdarg.h: Separate our stdarg.h into two, one which is the gcc-
	provided header and the other as _mingw_stdarg.h. Make stdarg.h include
	_mingw_stdarg.h.
	* float.h: Separate our float.h into two, one which is the gcc-
	provided header and the other as _mingw_float.h. Make float.h include
	_mingw_float.h. Fix confused license.
	* _mingw_float.h: New.
	* _mingw_stdarg.h: New.

2010-01-29  Ozkan Sezer  <sezeroz@gmail.com>

	* stdarg.h: Sync with the gcc PR c++/36799 fix from
	gcc trunk 2009-03-27/r145106.

2010-01-26  Jonathan Yong  <jon_y@users.sourceforge.net>

	* getopt.h: Sync with mingw.org, it is also now PD
	instead of BSD 4 clause.

2010-01-23  Kai Tietz  <kai.tietz@onevision.com>

	* crt/_mingw.h: Add SDK include of sdks/_mingw_ddk.h.

2010-01-14  Kai Tietz  <kai.tietz@onevision.com>

        * tchar.h (PTCHAR, TBYTE, PTBYTE): Added.

2010-01-07  Jonathan Yong  <jon_y@users.sourceforge.net>

	* math.h (sin): Add GCC pure attribute.
	(cos): Ditto.
	(tan): Ditto.
	(sinh): Ditto.
	(cosh): Ditto.
	(tanh): Ditto.
	(asin): Ditto.
	(acos): Ditto.
	(atan): Ditto.
	(atan2): Ditto.
	(exp): Ditto.
	(log): Ditto.
	(log2): Ditto.
	(pow): Ditto.
	(sqrt): Ditto.
	(ceil): Ditto.
	(floor): Ditto.
	(fabs): Ditto.
	(ldexp): Ditto.
	(frexp): Ditto.
	(modf): Ditto.
	(fmod): Ditto.
	(_cabs): Ditto.
	(_hypot): Ditto.
	(_j0): Ditto.
	(_j1): Ditto.
	(_jn): Ditto.
	(_y0): Ditto.
	(_y1): Ditto.
	(_yn): Ditto.
	(j0): Ditto.
	(j1): Ditto.
	(jn): Ditto.
	(y1): Ditto.
	(y2): Ditto.
	(yn): Ditto.
	(finite): Ditto.
	(fpclass): Ditto.
	(__fpclassifyl): Ditto.
	(__fpclassifyf): Ditto.
	(__fpclassify): Ditto.
	(__isnan): Ditto.
	(__isnanf): Ditto.
	(__isnanl): Ditto.
	(__signbit): Ditto.
	(__signbitf): Ditto.
	(__signbitl): Ditto.
	(sinf): Ditto.
	(sinl): Ditto.
	(cosf): Ditto.
	(cosl): Ditto.
	(tanf): Ditto.
	(tanl): Ditto.
	(asinf): Ditto.
	(asinl): Ditto.
	(acosf): Ditto.
	(acosl): Ditto.
	(atanf): Ditto.
	(atanl): Ditto.
	(atan2f): Ditto.